// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NestedCategoryFilterPicker /> should accept user interaction when the categoryId is an empty string 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId=""
    label="Picker Label"
    onSelect={[MockFunction]}
  >
    <CategoryPicker
      categoryId=""
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={[MockFunction]}
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 2,
            "id": "1",
            "isFetching": false,
            "name": "Category 1",
          },
          {
            "childrenCount": 0,
            "id": "2",
            "isFetching": false,
            "name": "Category 2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 2,
              "id": "1",
              "isFetching": false,
              "name": "Category 1",
            },
            {
              "childrenCount": 0,
              "id": "2",
              "isFetching": false,
              "name": "Category 2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={true}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={true}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": <div
                    class="sg-12f1i2r-content"
                  >
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1"
                    >
                      Category 1
                    </button>
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="2"
                    >
                      Category 2
                    </button>
                  </div>,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={true}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet sg-18ghh1t-section"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={true}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                >
                  <div
                    aria-modal={true}
                    className="common__drawer sg-14bsy0q-container-drawerAnimIn-container"
                    onAnimationEnd={[Function]}
                    role="dialog"
                    style={
                      {
                        "animationDuration": "300ms",
                      }
                    }
                    tabIndex={-1}
                  >
                    <Header
                      allowClose={true}
                      handleChange={[Function]}
                      onToggleClose={[Function]}
                      shadow={false}
                      showSearch={false}
                      title="Picker Label"
                    >
                      <div
                        className=""
                      >
                        <Grid
                          className="sg-uz2gz-wrapper"
                          component="div"
                          wrap={false}
                        >
                          <div
                            className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                          >
                            <button
                              aria-label="common.close"
                              className="sg-cb4y3g-closeButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Ripple
                                className="sg-8ivrra-closeIcon"
                                color="#000"
                                disabled={false}
                                fill={false}
                                onClick={[Function]}
                                onComplete={[Function]}
                                overflow={false}
                                size={null}
                              >
                                <div
                                  className="ui-shared__ripple sg-8ivrra-closeIcon"
                                  data-test-id="Ripple"
                                  onClick={[Function]}
                                  style={
                                    {
                                      "overflow": "hidden",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <Cross
                                    size={24}
                                  >
                                    <Icon
                                      content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                      size={24}
                                    >
                                      <svg
                                        className="sg-1n8b10t-root common__icon"
                                        dangerouslySetInnerHTML={
                                          {
                                            "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                          }
                                        }
                                        style={
                                          {
                                            "fill": undefined,
                                            "fontSize": 24,
                                          }
                                        }
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </Icon>
                                  </Cross>
                                </div>
                              </Ripple>
                            </button>
                            <GridItem
                              className="sg-1gh7dpa-title"
                              component="div"
                              grow={1}
                              role="heading"
                              shrink={1}
                              tabIndex={0}
                            >
                              <div
                                className="sg-1yim49x-root-title"
                                role="heading"
                                tabIndex={0}
                              >
                                Picker Label
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </Header>
                    <div
                      className="sg-1h0yrl3-progressBarContainer"
                    >
                      <ProgressBar
                        isVisible={false}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={150}
                          unmountOnExit={false}
                        >
                          <div
                            className="ui-shared__progress-bar"
                            style={
                              {
                                "background": {
                                  "color": [
                                    92,
                                    206,
                                    227,
                                  ],
                                  "model": "rgb",
                                  "valpha": 0.4,
                                },
                                "bottom": 0,
                                "height": 4,
                                "overflow": "hidden",
                                "position": "absolute",
                                "transform": "scale(1, 0)",
                                "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                                "width": "100%",
                                "zIndex": 10,
                              }
                            }
                          >
                            <div
                              className="sg-hmfbp5-innerElement"
                            />
                          </div>
                        </Transition>
                      </ProgressBar>
                    </div>
                    <div
                      className="sg-12f1i2r-content"
                      onScroll={[Function]}
                    >
                      <SheetList
                        key=".0"
                        onClose={[Function]}
                        query=""
                      >
                        <SheetItem
                          item={
                            {
                              "childrenCount": 2,
                              "id": "1",
                              "isFetching": false,
                              "name": "Category 1",
                            }
                          }
                          key="1"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1"
                            onClick={[Function]}
                            type="button"
                            value="1"
                          >
                            Category 1
                          </button>
                        </SheetItem>
                        <SheetItem
                          item={
                            {
                              "childrenCount": 0,
                              "id": "2",
                              "isFetching": false,
                              "name": "Category 2",
                            }
                          }
                          key="2"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="2"
                            onClick={[Function]}
                            type="button"
                            value="2"
                          >
                            Category 2
                          </button>
                        </SheetItem>
                      </SheetList>
                    </div>
                  </div>
                </Drawer>
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={true}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": <div
                          aria-hidden="true"
                          class="sg-1tlnanp-backdrop  common__backdrop"
                          data-test-id="Backdrop"
                          style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0.2; pointer-events: auto;"
                        />,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  >
                    <div
                      aria-hidden={true}
                      className="sg-1tlnanp-backdrop  common__backdrop"
                      data-test-id="Backdrop"
                      onClick={[Function]}
                      style={
                        {
                          "background": "#000",
                          "opacity": 0.2,
                          "pointerEvents": "auto",
                          "transition": "opacity 200ms ease-out",
                          "zIndex": 4,
                        }
                      }
                    />
                  </Transition>
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should handle user interaction as expected 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId="1"
    label="Picker Label"
    onSelect={[MockFunction]}
  >
    <CategoryPicker
      categoryId="1"
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={[MockFunction]}
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 0,
            "id": "1-1",
            "isFetching": false,
            "name": "Category 1-1",
          },
          {
            "childrenCount": 1,
            "id": "1-2",
            "isFetching": false,
            "name": "Category 1-2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 0,
              "id": "1-1",
              "isFetching": false,
              "name": "Category 1-1",
            },
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={true}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={true}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": <div
                    class="sg-12f1i2r-content"
                  >
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1-1"
                    >
                      Category 1-1
                    </button>
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1-2"
                    >
                      Category 1-2
                    </button>
                  </div>,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={true}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet sg-18ghh1t-section"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={true}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                >
                  <div
                    aria-modal={true}
                    className="common__drawer sg-14bsy0q-container-drawerAnimIn-container"
                    onAnimationEnd={[Function]}
                    role="dialog"
                    style={
                      {
                        "animationDuration": "300ms",
                      }
                    }
                    tabIndex={-1}
                  >
                    <Header
                      allowClose={true}
                      handleChange={[Function]}
                      onToggleClose={[Function]}
                      shadow={false}
                      showSearch={false}
                      title="Picker Label"
                    >
                      <div
                        className=""
                      >
                        <Grid
                          className="sg-uz2gz-wrapper"
                          component="div"
                          wrap={false}
                        >
                          <div
                            className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                          >
                            <button
                              aria-label="common.close"
                              className="sg-cb4y3g-closeButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Ripple
                                className="sg-8ivrra-closeIcon"
                                color="#000"
                                disabled={false}
                                fill={false}
                                onClick={[Function]}
                                onComplete={[Function]}
                                overflow={false}
                                size={null}
                              >
                                <div
                                  className="ui-shared__ripple sg-8ivrra-closeIcon"
                                  data-test-id="Ripple"
                                  onClick={[Function]}
                                  style={
                                    {
                                      "overflow": "hidden",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <Cross
                                    size={24}
                                  >
                                    <Icon
                                      content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                      size={24}
                                    >
                                      <svg
                                        className="sg-1n8b10t-root common__icon"
                                        dangerouslySetInnerHTML={
                                          {
                                            "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                          }
                                        }
                                        style={
                                          {
                                            "fill": undefined,
                                            "fontSize": 24,
                                          }
                                        }
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </Icon>
                                  </Cross>
                                </div>
                              </Ripple>
                            </button>
                            <GridItem
                              className="sg-1gh7dpa-title"
                              component="div"
                              grow={1}
                              role="heading"
                              shrink={1}
                              tabIndex={0}
                            >
                              <div
                                className="sg-1yim49x-root-title"
                                role="heading"
                                tabIndex={0}
                              >
                                Picker Label
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </Header>
                    <div
                      className="sg-1h0yrl3-progressBarContainer"
                    >
                      <ProgressBar
                        isVisible={false}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={150}
                          unmountOnExit={false}
                        >
                          <div
                            className="ui-shared__progress-bar"
                            style={
                              {
                                "background": {
                                  "color": [
                                    92,
                                    206,
                                    227,
                                  ],
                                  "model": "rgb",
                                  "valpha": 0.4,
                                },
                                "bottom": 0,
                                "height": 4,
                                "overflow": "hidden",
                                "position": "absolute",
                                "transform": "scale(1, 0)",
                                "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                                "width": "100%",
                                "zIndex": 10,
                              }
                            }
                          >
                            <div
                              className="sg-hmfbp5-innerElement"
                            />
                          </div>
                        </Transition>
                      </ProgressBar>
                    </div>
                    <div
                      className="sg-12f1i2r-content"
                      onScroll={[Function]}
                    >
                      <SheetList
                        key=".0"
                        onClose={[Function]}
                        query=""
                      >
                        <SheetItem
                          item={
                            {
                              "childrenCount": 0,
                              "id": "1-1",
                              "isFetching": false,
                              "name": "Category 1-1",
                            }
                          }
                          key="1-1"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1-1"
                            onClick={[Function]}
                            type="button"
                            value="1-1"
                          >
                            Category 1-1
                          </button>
                        </SheetItem>
                        <SheetItem
                          item={
                            {
                              "childrenCount": 1,
                              "id": "1-2",
                              "isFetching": false,
                              "name": "Category 1-2",
                            }
                          }
                          key="1-2"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1-2"
                            onClick={[Function]}
                            type="button"
                            value="1-2"
                          >
                            Category 1-2
                          </button>
                        </SheetItem>
                      </SheetList>
                    </div>
                  </div>
                </Drawer>
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={true}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": <div
                          aria-hidden="true"
                          class="sg-1tlnanp-backdrop  common__backdrop"
                          data-test-id="Backdrop"
                          style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0.2; pointer-events: auto;"
                        />,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  >
                    <div
                      aria-hidden={true}
                      className="sg-1tlnanp-backdrop  common__backdrop"
                      data-test-id="Backdrop"
                      onClick={[Function]}
                      style={
                        {
                          "background": "#000",
                          "opacity": 0.2,
                          "pointerEvents": "auto",
                          "transition": "opacity 200ms ease-out",
                          "zIndex": 4,
                        }
                      }
                    />
                  </Transition>
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should handle user interaction as expected 2`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId="1"
    label="Picker Label"
    onSelect={
      [MockFunction] {
        "calls": [
          [
            "1",
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <CategoryPicker
      categoryId="1"
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={
        [MockFunction] {
          "calls": [
            [
              "1",
              {
                "childrenCount": 1,
                "id": "1-2",
                "isFetching": false,
                "name": "Category 1-2",
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 0,
            "id": "1-1",
            "isFetching": false,
            "name": "Category 1-1",
          },
          {
            "childrenCount": 1,
            "id": "1-2",
            "isFetching": false,
            "name": "Category 1-2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 0,
              "id": "1-1",
              "isFetching": false,
              "name": "Category 1-1",
            },
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={false}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={false}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={false}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": <div
                    class="sg-12f1i2r-content"
                  >
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1-1"
                    >
                      Category 1-1
                    </button>
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1-2"
                    >
                      Category 1-2
                    </button>
                  </div>,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={false}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={false}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                >
                  <div
                    aria-modal={true}
                    className="common__drawer sg-1wgf7aq-container-drawerAnimOut-container"
                    onAnimationEnd={[Function]}
                    role="dialog"
                    style={
                      {
                        "animationDuration": "300ms",
                      }
                    }
                    tabIndex={-1}
                  >
                    <Header
                      allowClose={true}
                      handleChange={[Function]}
                      onToggleClose={[Function]}
                      shadow={false}
                      showSearch={false}
                      title="Picker Label"
                    >
                      <div
                        className=""
                      >
                        <Grid
                          className="sg-uz2gz-wrapper"
                          component="div"
                          wrap={false}
                        >
                          <div
                            className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                          >
                            <button
                              aria-label="common.close"
                              className="sg-cb4y3g-closeButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Ripple
                                className="sg-8ivrra-closeIcon"
                                color="#000"
                                disabled={false}
                                fill={false}
                                onClick={[Function]}
                                onComplete={[Function]}
                                overflow={false}
                                size={null}
                              >
                                <div
                                  className="ui-shared__ripple sg-8ivrra-closeIcon"
                                  data-test-id="Ripple"
                                  onClick={[Function]}
                                  style={
                                    {
                                      "overflow": "hidden",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <Cross
                                    size={24}
                                  >
                                    <Icon
                                      content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                      size={24}
                                    >
                                      <svg
                                        className="sg-1n8b10t-root common__icon"
                                        dangerouslySetInnerHTML={
                                          {
                                            "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                          }
                                        }
                                        style={
                                          {
                                            "fill": undefined,
                                            "fontSize": 24,
                                          }
                                        }
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </Icon>
                                  </Cross>
                                </div>
                              </Ripple>
                            </button>
                            <GridItem
                              className="sg-1gh7dpa-title"
                              component="div"
                              grow={1}
                              role="heading"
                              shrink={1}
                              tabIndex={0}
                            >
                              <div
                                className="sg-1yim49x-root-title"
                                role="heading"
                                tabIndex={0}
                              >
                                Picker Label
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </Header>
                    <div
                      className="sg-1h0yrl3-progressBarContainer"
                    >
                      <ProgressBar
                        isVisible={false}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={150}
                          unmountOnExit={false}
                        >
                          <div
                            className="ui-shared__progress-bar"
                            style={
                              {
                                "background": {
                                  "color": [
                                    92,
                                    206,
                                    227,
                                  ],
                                  "model": "rgb",
                                  "valpha": 0.4,
                                },
                                "bottom": 0,
                                "height": 4,
                                "overflow": "hidden",
                                "position": "absolute",
                                "transform": "scale(1, 0)",
                                "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                                "width": "100%",
                                "zIndex": 10,
                              }
                            }
                          >
                            <div
                              className="sg-hmfbp5-innerElement"
                            />
                          </div>
                        </Transition>
                      </ProgressBar>
                    </div>
                    <div
                      className="sg-12f1i2r-content"
                      onScroll={[Function]}
                    >
                      <SheetList
                        key=".0"
                        onClose={[Function]}
                        query=""
                      >
                        <SheetItem
                          item={
                            {
                              "childrenCount": 0,
                              "id": "1-1",
                              "isFetching": false,
                              "name": "Category 1-1",
                            }
                          }
                          key="1-1"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1-1"
                            onClick={[Function]}
                            type="button"
                            value="1-1"
                          >
                            Category 1-1
                          </button>
                        </SheetItem>
                        <SheetItem
                          item={
                            {
                              "childrenCount": 1,
                              "id": "1-2",
                              "isFetching": false,
                              "name": "Category 1-2",
                            }
                          }
                          key="1-2"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1-2"
                            onClick={[Function]}
                            type="button"
                            value="1-2"
                          >
                            Category 1-2
                          </button>
                        </SheetItem>
                      </SheetList>
                    </div>
                  </div>
                </Drawer>
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={false}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": <div
                          aria-hidden="true"
                          class="sg-1tlnanp-backdrop  common__backdrop"
                          data-test-id="Backdrop"
                          style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0; pointer-events: none;"
                        />,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  >
                    <div
                      aria-hidden={true}
                      className="sg-1tlnanp-backdrop  common__backdrop"
                      data-test-id="Backdrop"
                      onClick={[Function]}
                      style={
                        {
                          "background": "#000",
                          "opacity": 0,
                          "pointerEvents": "none",
                          "transition": "opacity 200ms ease-out",
                          "zIndex": 4,
                        }
                      }
                    />
                  </Transition>
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should highlight the preselected subcategory within the sheet  1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId="1"
    label="Picker Label"
    onSelect={[MockFunction]}
    selectedId="1-1"
  >
    <CategoryPicker
      categoryId="1"
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={[MockFunction]}
      selectedId="1-1"
      subcategories={
        [
          {
            "childrenCount": 0,
            "id": "1-1",
            "isFetching": false,
            "name": "Category 1-1",
          },
          {
            "childrenCount": 1,
            "id": "1-2",
            "isFetching": false,
            "name": "Category 1-2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          Category 1-1
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 0,
              "id": "1-1",
              "isFetching": false,
              "name": "Category 1-1",
            },
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={true}
        selectedId="1-1"
      >
        <SheetDrawer
          isOpen={true}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={true}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": <div
                    class="sg-12f1i2r-content"
                  >
                    <button
                      class="sg-150wio3-buttonSelected"
                      type="button"
                      value="1-1"
                    >
                      Category 1-1
                    </button>
                    <button
                      class="sg-1yjeh22-button"
                      type="button"
                      value="1-2"
                    >
                      Category 1-2
                    </button>
                  </div>,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={true}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet sg-18ghh1t-section"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={true}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                >
                  <div
                    aria-modal={true}
                    className="common__drawer sg-14bsy0q-container-drawerAnimIn-container"
                    onAnimationEnd={[Function]}
                    role="dialog"
                    style={
                      {
                        "animationDuration": "300ms",
                      }
                    }
                    tabIndex={-1}
                  >
                    <Header
                      allowClose={true}
                      handleChange={[Function]}
                      onToggleClose={[Function]}
                      shadow={false}
                      showSearch={false}
                      title="Picker Label"
                    >
                      <div
                        className=""
                      >
                        <Grid
                          className="sg-uz2gz-wrapper"
                          component="div"
                          wrap={false}
                        >
                          <div
                            className="common__grid sg-1dxmo4l-root-noWrap-wrapper"
                          >
                            <button
                              aria-label="common.close"
                              className="sg-cb4y3g-closeButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Ripple
                                className="sg-8ivrra-closeIcon"
                                color="#000"
                                disabled={false}
                                fill={false}
                                onClick={[Function]}
                                onComplete={[Function]}
                                overflow={false}
                                size={null}
                              >
                                <div
                                  className="ui-shared__ripple sg-8ivrra-closeIcon"
                                  data-test-id="Ripple"
                                  onClick={[Function]}
                                  style={
                                    {
                                      "overflow": "hidden",
                                      "position": "relative",
                                    }
                                  }
                                >
                                  <Cross
                                    size={24}
                                  >
                                    <Icon
                                      content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                      size={24}
                                    >
                                      <svg
                                        className="sg-1n8b10t-root common__icon"
                                        dangerouslySetInnerHTML={
                                          {
                                            "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                          }
                                        }
                                        style={
                                          {
                                            "fill": undefined,
                                            "fontSize": 24,
                                          }
                                        }
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </Icon>
                                  </Cross>
                                </div>
                              </Ripple>
                            </button>
                            <GridItem
                              className="sg-1gh7dpa-title"
                              component="div"
                              grow={1}
                              role="heading"
                              shrink={1}
                              tabIndex={0}
                            >
                              <div
                                className="sg-1yim49x-root-title"
                                role="heading"
                                tabIndex={0}
                              >
                                Picker Label
                              </div>
                            </GridItem>
                          </div>
                        </Grid>
                      </div>
                    </Header>
                    <div
                      className="sg-1h0yrl3-progressBarContainer"
                    >
                      <ProgressBar
                        isVisible={false}
                      >
                        <Transition
                          appear={false}
                          enter={true}
                          exit={true}
                          in={false}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          timeout={150}
                          unmountOnExit={false}
                        >
                          <div
                            className="ui-shared__progress-bar"
                            style={
                              {
                                "background": {
                                  "color": [
                                    92,
                                    206,
                                    227,
                                  ],
                                  "model": "rgb",
                                  "valpha": 0.4,
                                },
                                "bottom": 0,
                                "height": 4,
                                "overflow": "hidden",
                                "position": "absolute",
                                "transform": "scale(1, 0)",
                                "transition": "transform 150ms cubic-bezier(0.25, 0.1, 0.25, 1)",
                                "width": "100%",
                                "zIndex": 10,
                              }
                            }
                          >
                            <div
                              className="sg-hmfbp5-innerElement"
                            />
                          </div>
                        </Transition>
                      </ProgressBar>
                    </div>
                    <div
                      className="sg-12f1i2r-content"
                      onScroll={[Function]}
                    >
                      <SheetList
                        key=".0"
                        onClose={[Function]}
                        query=""
                      >
                        <SheetItem
                          item={
                            {
                              "childrenCount": 0,
                              "id": "1-1",
                              "isFetching": false,
                              "name": "Category 1-1",
                            }
                          }
                          key="1-1"
                          onClick={[Function]}
                          selected={true}
                        >
                          <button
                            className="sg-150wio3-buttonSelected"
                            key="1-1"
                            onClick={[Function]}
                            type="button"
                            value="1-1"
                          >
                            Category 1-1
                          </button>
                        </SheetItem>
                        <SheetItem
                          item={
                            {
                              "childrenCount": 1,
                              "id": "1-2",
                              "isFetching": false,
                              "name": "Category 1-2",
                            }
                          }
                          key="1-2"
                          onClick={[Function]}
                          selected={false}
                        >
                          <button
                            className="sg-1yjeh22-button"
                            key="1-2"
                            onClick={[Function]}
                            type="button"
                            value="1-2"
                          >
                            Category 1-2
                          </button>
                        </SheetItem>
                      </SheetList>
                    </div>
                  </div>
                </Drawer>
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={true}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={true}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": <div
                          aria-hidden="true"
                          class="sg-1tlnanp-backdrop  common__backdrop"
                          data-test-id="Backdrop"
                          style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0.2; pointer-events: auto;"
                        />,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  >
                    <div
                      aria-hidden={true}
                      className="sg-1tlnanp-backdrop  common__backdrop"
                      data-test-id="Backdrop"
                      onClick={[Function]}
                      style={
                        {
                          "background": "#000",
                          "opacity": 0.2,
                          "pointerEvents": "auto",
                          "transition": "opacity 200ms ease-out",
                          "zIndex": 4,
                        }
                      }
                    />
                  </Transition>
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should not accept user interaction when no categoryId was passed 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    label="Picker Label"
    onSelect={[MockFunction]}
  >
    <CategoryPicker
      categoryId={null}
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={[MockFunction]}
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 2,
            "id": "1",
            "isFetching": false,
            "name": "Category 1",
          },
          {
            "childrenCount": 0,
            "id": "2",
            "isFetching": false,
            "name": "Category 2",
          },
        ]
      }
    >
      <div
        aria-disabled={true}
        aria-hidden={true}
        className="sg-hlwkfd-button-buttonDisabled"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 2,
              "id": "1",
              "isFetching": false,
              "name": "Category 1",
            },
            {
              "childrenCount": 0,
              "id": "2",
              "isFetching": false,
              "name": "Category 2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={false}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={false}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={false}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": null,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={false}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={false}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                />
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={false}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": null,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  />
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should render the picker with no initial category selection 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId="1"
    label="Picker Label"
    onSelect={[MockFunction]}
  >
    <CategoryPicker
      categoryId="1"
      fetchCategory={[Function]}
      label="Picker Label"
      onSelect={[MockFunction]}
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 0,
            "id": "1-1",
            "isFetching": false,
            "name": "Category 1-1",
          },
          {
            "childrenCount": 1,
            "id": "1-2",
            "isFetching": false,
            "name": "Category 1-2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-1pccjd4-label"
          data-test-id="nested-picker-label"
        >
          Picker Label
        </div>
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 0,
              "id": "1-1",
              "isFetching": false,
              "name": "Category 1-1",
            },
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ]
        }
        label="Picker Label"
        onClose={[Function]}
        onSelect={[Function]}
        open={false}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={false}
          onClose={[Function]}
          title="Picker Label"
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={false}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title="Picker Label"
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": null,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={false}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title="Picker Label"
            >
              <section
                className="ui-shared__sheet"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={false}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                />
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={false}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": null,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  />
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;

exports[`<NestedCategoryFilterPicker /> should render the picker without a label 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(CategoryPicker)
    categoryId="1"
    label=""
    onSelect={[MockFunction]}
  >
    <CategoryPicker
      categoryId="1"
      fetchCategory={[Function]}
      label=""
      onSelect={[MockFunction]}
      selectedId={null}
      subcategories={
        [
          {
            "childrenCount": 0,
            "id": "1-1",
            "isFetching": false,
            "name": "Category 1-1",
          },
          {
            "childrenCount": 1,
            "id": "1-2",
            "isFetching": false,
            "name": "Category 1-2",
          },
        ]
      }
    >
      <div
        aria-disabled={false}
        aria-hidden={true}
        className="sg-tky32e-button"
        data-test-id="nested-picker-trigger"
        onClick={[Function]}
      >
        <div
          className="sg-2yv5tj-selection"
          data-test-id="nested-picker-selection"
        >
          common.please_choose
        </div>
      </div>
      <CategorySheet
        items={
          [
            {
              "childrenCount": 0,
              "id": "1-1",
              "isFetching": false,
              "name": "Category 1-1",
            },
            {
              "childrenCount": 1,
              "id": "1-2",
              "isFetching": false,
              "name": "Category 1-2",
            },
          ]
        }
        label=""
        onClose={[Function]}
        onSelect={[Function]}
        open={false}
        selectedId={null}
      >
        <SheetDrawer
          isOpen={false}
          onClose={[Function]}
          title=""
        >
          <Sheet
            allowClose={true}
            animation={{}}
            backdrop={true}
            className={null}
            contentClassName={null}
            duration={300}
            isLoading={false}
            isOpen={false}
            onClose={[Function]}
            onDidClose={[Function]}
            onDidOpen={[Function]}
            onOpen={[Function]}
            showSearch={false}
            title=""
          >
            <SheetView
              allowClose={true}
              animationFromParent={{}}
              backdrop={true}
              className={null}
              contentClassName={null}
              contentRef={
                {
                  "current": null,
                }
              }
              duration={300}
              handleSearchInput={[Function]}
              isLoading={false}
              isOpen={false}
              onClose={[Function]}
              onDidClose={[Function]}
              onDidOpen={[Function]}
              onOpen={[Function]}
              onScroll={[Function]}
              scrolled={false}
              showSearch={false}
              title=""
            >
              <section
                className="ui-shared__sheet"
              >
                <Drawer
                  animation={
                    {
                      "duration": 300,
                      "in": "sg-1qtpl1n-drawerAnimIn",
                      "out": "sg-1uynekm-drawerAnimOut",
                    }
                  }
                  className="sg-omro4t-container"
                  isOpen={false}
                  onClose={[Function]}
                  onDidClose={[Function]}
                  onDidOpen={[Function]}
                  onOpen={[Function]}
                />
                <Backdrop
                  className=""
                  color="#000"
                  duration={200}
                  isVisible={false}
                  level={4}
                  lockBodyScroll={true}
                  onClick={[Function]}
                  opacity={20}
                >
                  <Transition
                    appear={true}
                    enter={true}
                    exit={true}
                    in={false}
                    mountOnEnter={true}
                    nodeRef={
                      {
                        "current": null,
                      }
                    }
                    onEnter={[Function]}
                    onEntered={[Function]}
                    onEntering={[Function]}
                    onExit={[Function]}
                    onExited={[Function]}
                    onExiting={[Function]}
                    timeout={200}
                    unmountOnExit={true}
                  />
                </Backdrop>
              </section>
            </SheetView>
          </Sheet>
        </SheetDrawer>
      </CategorySheet>
    </CategoryPicker>
  </Connect(CategoryPicker)>
</Provider>
`;
